--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 
 
-EditorStartupMap=/Game/Maps/Level2_Forest.Level2_Forest
+EditorStartupMap=/Game/Maps/AITestGround.AITestGround
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_HookGameGameModeBase.BP_HookGameGameModeBase_C
 GameInstanceClass=/Script/HookGame.HookGameInstance
 
